[package]
name = "wolves-cli-helper" 
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
console = "0.15.11"
num_cpus = "1.16.0"
sysinfo = "0.34.2"
term_size = "0.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
wolves-rust-defs = { version = "*", path = "../wolves-rust-defs", features=["serde_support"] }
# wolves-rust-defs = { version="0.1.0", git = "https://github.com/WebTargetLtd/wolves-rust-defs" , features = ["serde_support"], branch="main" }

[features]
serde_support = ["serde"]
